--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 $.ajax({
                     type: "POST",
                     url: moonurl,
-                    data: data,
+                    data: moonJson,
                     dataType: "json",
                     success: function (parsed_json) {
                         console.log(parsed_json);
