--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
         function displayMoons(moonsJson) {
           var moonsData = moonsJson.map(function(moon) {
             return '<tr>' +
-              '<td>' + moon.location '</td>' +
-              '<td>' + moon.number '</td>' +
-              '<td>' + moon.description '</td>' +
+              '<td>' + moon.location + '</td>' +
+              '<td>' + moon.number + '</td>' +
+              '<td>' + moon.description + '</td>' +
               + '</tr>'
           });
           
