--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
         }
       
       function getMoons() {
+            var moonurl = "/moons";
+
         $.ajax({
             type: "GET",
             url: moonurl,
