another typo from ben

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
           });
           
           moonsHtml = '<table><th>' +
-            '<td>' + Location + '</td>' +
-            '<td>' + Number + '</td>' +
-            '<td>' + Description + '</td></th>' +
+            '<td>' + "Location" + '</td>' +
+            '<td>' + "Number" + '</td>' +
+            '<td>' + "Description" + '</td></th>' +
             moonsData + '</table>';
           
           $('#moonResults').html(moonsHtml);
