--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             '<td>' + "Location" + '</td>' +
             '<td>' + "Number" + '</td>' +
             '<td>' + "  Description" + '</td></th>' +
-            moonsData + '</table>';
+            moonsData.join('') + '</table>';
           
           $('#moonResults').html(moonsHtml);
             
