Style on the form and title

--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,9 @@
 
 </head>
 <body>
+<h1> Super Mario Odyssey - Moon Collaboration</h1>
 
-<form>
+<form id="moonForm">
     Enter the Area Name: <input type="text" id="moonLocation" value=""><br>
     Enter the Moon Number: <input type="text" id="moonNumber" value=""><br>
     Enter a Description: <input type="text" id="moonDescription" value=""><br>
